--- a/templates/doctor_profile.html
+++ b/templates/doctor_profile.html
@@ -14,7 +14,13 @@
               <!-- Doctor Information -->
                   <div class="row border border-0">
                     <div class="col-md-4 border border-0">
-                      <img src="{{ doctor.doctor_profile.profile_picture.url }}" class="img-fluid" alt="...">
+                      {% if doctor.doctor_profile.profile_picture_url %}
+                      <img src="{{ doctor.doctor_profile.profile_picture_url }}" alt="Dr. {{ doctor.first_name }} {{ doctor.last_name }}">
+                      {% elif doctor.doctor_profile.profile_picture %}
+                      <img src="{{ doctor.doctor_profile.profile_picture.url }}" alt="Dr. {{ doctor.first_name }} {{ doctor.last_name }}">
+                      {% else %}
+                      <img src="{% static 'images/default-profile.jpg' %}" alt="No Image">
+                      {% endif %}
                     </div>
                     <div class="col-md-8 border p-3">
                       <div class="card-body">
